--- a/20200715-cehui-provider-management/20200715-cehui-provider-8081/src/main/resources/config/application.properties
+++ b/20200715-cehui-provider-management/20200715-cehui-provider-8081/src/main/resources/config/application.properties
@@ -2,12 +2,12 @@ server.port=8081
 server.servlet.context-path=/
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/erqi?characterEncoding=utf-8&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=123123
-spring.datasource.url=jdbc:mysql://120.78.182.121:3306/qy110?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/erqi?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Aa.123456
+spring.datasource.password=123123
+#spring.datasource.url=jdbc:mysql://120.78.182.121:3306/qy110?characterEncoding=utf-8&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=Aa.123456
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 mybatis.type-aliases-package=com.aaa.model
