--- a/20200715-cehui-consumer-management/20200715-cehui-consumer-7081/src/main/resources/config/application.properties
+++ b/20200715-cehui-consumer-management/20200715-cehui-consumer-7081/src/main/resources/config/application.properties
@@ -1,8 +1,8 @@
 server.port=7081
 server.servlet.context-path=/
 
-#spring.application.name=cehui-interface-consumer
-#eureka.instance.instance-id=cehui-interface-consumer-7081
+spring.application.name=cehui-interface-consumer
+eureka.instance.instance-id=cehui-interface-consumer-7081
 eureka.client.service-url.defaultZone=http://eureka01:6081/eureka/,http://eureka02:6082/eureka/,http://eureka03:6083/eureka/
 #consumer向eureka中进行注册
 eureka.client.register-with-eureka=false
@@ -10,5 +10,7 @@ eureka.client.register-with-eureka=false
 #开启熔断器
 #feign.hystrix.enabled=true
 
-#关闭ribbon中使用eureka
-#ribbon.eureka.enabled=false
+# 设置feign客户端超时时间（OpenFeign默认支持ribbon）
+# 指的是建立连接后从服务器读取到可用资源所用的时间
+#ribbon.ReadTimeout=
+
