--- a/20200715-cehui-zuul-5081/pom.xml
+++ b/20200715-cehui-zuul-5081/pom.xml
@@ -11,5 +11,29 @@
 
     <artifactId>20200715-cehui-zuul-5081</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.aaa</groupId>
+            <artifactId>20200715-cehui-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aaa</groupId>
+            <artifactId>20200715-cehui-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
