--- a/20200715-cehui-provider-management/20200715-cehui-provider-8081/src/main/resources/config/application.properties
+++ b/20200715-cehui-provider-management/20200715-cehui-provider-8081/src/main/resources/config/application.properties
@@ -62,3 +62,6 @@ pagehelper.reasonable=false
 # 查找到合适的值时就会自动分页。
 pagehelper.support-methods-arguments=true
 
+# 配置从redis中获取数据的key
+# 获取menu
+menu_key=menu_key
