--- a/20200715-cehui-consumer-management/20200715-cehui-consumer-7081/src/main/resources/config/application.properties
+++ b/20200715-cehui-consumer-management/20200715-cehui-consumer-7081/src/main/resources/config/application.properties
@@ -12,5 +12,12 @@ eureka.client.register-with-eureka=false
 
 # 设置feign客户端超时时间（OpenFeign默认支持ribbon）
 # 指的是建立连接后从服务器读取到可用资源所用的时间
-#ribbon.ReadTimeout=
+ribbon.ReadTimeout=60000
+# 指的是建立连接所用的时间,使用与网络状态正常的情况下,两端连接所用max的时间
+ribbon.ConnectTimeout=60000
+
+# 设置单个文件大小
+spring.servlet.multipart.max-file-size=50MB
+# 设置单次请求文件的总大小
+spring.servlet.multipart.max-request-size=100MB
 
