--- a/20200715-cehui-zuul-5081/src/main/resources/config/application.properties
+++ b/20200715-cehui-zuul-5081/src/main/resources/config/application.properties
@@ -6,14 +6,24 @@ spring.application.name=cehui-zuul
 eureka.client.service-url.defaultZone=http://eureka01:6081/eureka/,http://eureka02:6082/eureka/,http://eureka03:6083/eureka/
 eureka.instance.instance-id=cehui-zuul-5081
 
+# 路由通过ribbon跳转到consumer
+#ribbon.eureka.enabled=false
+#cehui-interface-consumer.ribbon.listOfServers=localhost:7081
+#cehui-interface-consumer.ribbon.NFloadbalanceRuleClassName=com.netflix.loadbalancer.RandomRule
 zuul.routes.cehui-interface-consumer.path=/cehui/**
 
 # 细节
 # 将真实路径禁用掉，让用户不能使用真实路径来寻找provider
 # 这里也可以使用*通配符，将所有真实的路径都屏蔽掉
 zuul.ignored-services=*
+zuul.prefix=/aaa
 
-# 设置超时时间
+# 设置zuul的连接超时时间及网络超时
 zuul.host.connect-timeout-millis=100000
 zuul.host.socket-timeout-millis=100000
+
+# ribbon的连接超时
+#ribbon.ReadTimeout=10000
+#ribbon.ConnectTimeout=10000
+
 
